@@ -128,11 +128,11 @@ void export_layer()
                       "\n"
                       "The srs can be either a Proj.4 epsg code ('+init=epsg:<code>') or\n"
                       "of a Proj.4 literal ('+proj=<literal>').\n"
-                      "If no srs is specified it will default to '+proj=latlong +datum=WGS84'\n"
+                      "If no srs is specified it will default to '+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs'\n"
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr\n"
                       "<mapnik._mapnik.Layer object at 0x6a270>\n"
                       ))
@@ -146,7 +146,7 @@ void export_layer()
              "\n"
              "Usage:\n"
              ">>> from mapnik import Layer\n"
-             ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+             ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
              ">>> lyr.envelope()\n"
              "box2d(-1.0,-1.0,0.0,0.0) # default until a datasource is loaded\n"
             )
@@ -163,7 +163,7 @@ void export_layer()
              "\n"
              "Usage:\n"
              ">>> from mapnik import Layer\n"
-             ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+             ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
              ">>> lyr.visible(1.0/1000000)\n"
              "True\n"
              ">>> lyr.active = False\n"
@@ -178,7 +178,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.abstract\n"
                       "'' # default is en empty string\n"
                       ">>> lyr.abstract = 'My Shapefile rendered with Mapnik'\n"
@@ -193,7 +193,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.active\n"
                       "True # Active by default\n"
                       ">>> lyr.active = False # set False to disable layer rendering\n"
@@ -217,7 +217,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer, Datasource\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.datasource = Datasource(type='shape',file='world_borders')\n"
                       ">>> lyr.datasource\n"
                       "<mapnik.Datasource object at 0x65470>\n"
@@ -230,7 +230,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.maxzoom\n"
                       "1.7976931348623157e+308 # default is the numerical maximum\n"
                       ">>> lyr.maxzoom = 1.0/1000000\n"
@@ -245,7 +245,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.minzoom # default is 0\n"
                       "0.0\n"
                       ">>> lyr.minzoom = 1.0/1000000\n"
@@ -260,7 +260,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import Layer\n"
-                      ">>> lyr = Layer('My Layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = Layer('My Layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.name\n"
                       "'My Layer'\n"
                       ">>> lyr.name = 'New Name'\n"
@@ -275,7 +275,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import layer\n"
-                      ">>> lyr = layer('My layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = layer('My layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.queryable\n"
                       "False # Not queryable by default\n"
                       ">>> lyr.queryable = True\n"
@@ -290,9 +290,9 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import layer\n"
-                      ">>> lyr = layer('My layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = layer('My layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.srs\n"
-                      "'+proj=latlong +datum=WGS84' # The default srs if not initialized with custom srs\n"
+                      "'+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs' # The default srs if not initialized with custom srs\n"
                       ">>> # set to google mercator with Proj.4 literal\n"
                       "... \n"
                       ">>> lyr.srs = '+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +no_defs +over'\n"
@@ -304,7 +304,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import layer\n"
-                      ">>> lyr = layer('My layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = layer('My layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.styles\n"
                       "<mapnik._mapnik.Names object at 0x6d3e8>\n"
                       ">>> len(lyr.styles)\n"
@@ -323,7 +323,7 @@ void export_layer()
                       "\n"
                       "Usage:\n"
                       ">>> from mapnik import layer\n"
-                      ">>> lyr = layer('My layer','+proj=latlong +datum=WGS84')\n"
+                      ">>> lyr = layer('My layer','+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs')\n"
                       ">>> lyr.title\n"
                       "''\n"
                       ">>> lyr.title = 'My first layer'\n"
